# pattmayne_auth

./: Cargo.toml  Docker  README.md  \
migrations/: 0001_init.sql
src/: auth.rs  auth_code_shared.rs  db.rs  external_routes.rs  main.rs  middleware.rs  resource_mgr.rs  resources.rs  routes.rs  routes_external.rs  routes_utils.rs  utils.rs
static/css/: app.css  app.css.map
static/js/: admin_page.js  app.js  dashboard.js  edit_client_form.js  globals.js  login.js  new_client_form.js  register.js  utils.js
static/scss/: app.scss
templates/: admin_page.html  dashboard.html  edit_client_form_page.html  error.html  header.html  index.html  login.html  new_client_form_page.html  register.html
