[package]
name = "pattmayne_auth"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
sqlx = "0.8.6"
tokio = "1.47.2"
askama = "0.14.0"
actix-web-httpauth = "0.8.2"
actix-files = "0.6.8"
serde = "1.0.228"
serde_json = "1.0.145"