[package]
name = "pattmayne_auth"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
sqlx = { version = "0.8.6", features = ["mysql", "runtime-tokio", "macros", "migrate"] }
tokio = {version = "1.47.2", features = ["full"]}
askama = "0.14.0"
actix-web-httpauth = "0.8.2"
actix-files = "0.6.8"
serde = "1.0.228"
serde_json = "1.0.145"
dotenvy = "0.15.7"
password-hash = "0.5.0"
rand_core = "0.6"
argon2 = "0.5.3"